<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jessicauelmen.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/HeadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/can_you_ravenclaw" />

        <TextView
            style="@style/SubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_quiz"/>

        <TextView
            style="@style/QuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_prompt"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/q1_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option1"/>
            <RadioButton
                android:id="@+id/q1_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option2"/>
            <RadioButton
                android:id="@+id/q1_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option3"/>
            <RadioButton
                android:id="@+id/q1_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option4"/>
        </RadioGroup>

        <TextView
            style="@style/QuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_prompt"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/q2_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_option1"/>
            <RadioButton
                android:id="@+id/q2_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_option2"/>
            <RadioButton
                android:id="@+id/q2_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_option3"/>
            <RadioButton
                android:id="@+id/q2_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_option4"/>
        </RadioGroup>

        <TextView
            style="@style/QuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_prompt"/>
        <CheckBox
            android:id="@+id/q3_option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_option1"/>
        <CheckBox
            android:id="@+id/q3_option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_option2"/>
        <CheckBox
            android:id="@+id/q3_option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_option3"/>
        <CheckBox
            android:id="@+id/q3_option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_option4"/>
        <CheckBox
            android:id="@+id/q3_option5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_option5"/>


        <TextView
            style="@style/QuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_prompt"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/q4_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_option1"/>
            <RadioButton
                android:id="@+id/q4_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_option2"/>
            <RadioButton
                android:id="@+id/q4_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_option3"/>
            <RadioButton
                android:id="@+id/q4_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_option4"/>
        </RadioGroup>

        <TextView
            style="@style/QuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5_prompt"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/q5_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_option1"/>
            <RadioButton
                android:id="@+id/q5_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_option2"/>
            <RadioButton
                android:id="@+id/q5_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_option3"/>
            <RadioButton
                android:id="@+id/q5_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_option4"/>
        </RadioGroup>

        <TextView
            style="@style/QuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q6_prompt"/>
        <EditText
            android:id="@+id/q6_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <Button
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_text"
            android:onClick="gradeQuiz"/>
    </LinearLayout>

</ScrollView>
